--- a/.github/workflows/ns3-sim.yml
+++ b/.github/workflows/ns3-sim.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   simulate:
     runs-on: windows-latest
+    timeout-minutes: 15
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -25,13 +26,19 @@ jobs:
       run: choco install 7zip -y
       shell: powershell
 
+    - name: Setup Visual Studio Environment
+      uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: x64
+
     - name: Run NS3 Simulation
       run: |
         cd scripts
-        .\run-sim.ps1 --nNodes=200 --simDuration=1800 > ../simulation-results.txt
+        .\run-sim.ps1 --nNodes=200 --simDuration=1800 > ..\simulation-results.txt
       shell: powershell
 
     - name: Upload Results
+      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: simulation-results
