--- a/.github/workflows/ns3-sim.yml
+++ b/.github/workflows/ns3-sim.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   simulate:
     runs-on: windows-latest
-    timeout-minutes: 15
+    timeout-minutes: 30
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -24,6 +24,11 @@ jobs:
       uses: ilammy/msvc-dev-cmd@v1
       with:
         arch: x64
+    - name: Verify Visual Studio Environment
+      run: |
+        cl
+        Write-Host "Visual Studio compiler found"
+      shell: powershell
     - name: Run NS-3 Simulation
       run: |
         cd scripts
