--- a/.github/workflows/ns3-sim.yml
+++ b/.github/workflows/ns3-sim.yml
@@ -1,4 +1,4 @@
-name: NS-3 Simulation
+name: NS-3 Docker Simulation
 on:
   push:
     branches: [ main ]
@@ -6,72 +6,34 @@ on:
     branches: [ main ]
 jobs:
   simulate:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
     
-    - name: Install Python
-      uses: actions/setup-python@v5
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
+    - name: Build Docker image
+      uses: docker/build-push-action@v5
       with:
-        python-version: '3.9'
+        context: .
+        push: false
+        load: true
+        tags: p2pool-ns3:latest
     
-    - name: Install CMake
-      uses: lukka/get-cmake@latest
-    
-    - name: Install 7-Zip
-      run: choco install 7zip -y
-      shell: powershell
-    
-    - name: Install Boost
+    - name: Run simulation
       run: |
-        choco install boost-msvc-14.2 -y
-        # Add Boost to the path environment variable
-        echo "BOOST_ROOT=C:\local\boost_1_73_0" | Out-File -FilePath $env:GITHUB_ENV -Append
-        echo "BOOST_INCLUDEDIR=C:\local\boost_1_73_0" | Out-File -FilePath $env:GITHUB_ENV -Append
-        echo "BOOST_LIBRARYDIR=C:\local\boost_1_73_0\lib64-msvc-14.2" | Out-File -FilePath $env:GITHUB_ENV -Append
-      shell: powershell
-    
-    - name: Setup Visual Studio Environment
-      uses: ilammy/msvc-dev-cmd@v1
-      with:
-        arch: x64
-    
-    - name: Verify Visual Studio Environment
-      run: |
-        cl
-        Write-Host "Visual Studio compiler found"
-      shell: powershell
-    
-    - name: Fix run-sim script
-      run: |
-        $scriptContent = Get-Content -Path "scripts/run-sim.ps1" -Raw
-        # Add more detailed error handling
-        $scriptContent = $scriptContent -replace "cmake --build . --config Release --target p2pool-sim -- -maxcpucount > build.log 2>&1", "cmake --build . --config Release --target scratch/p2pool-sim -- -maxcpucount:4 -verbosity:normal | Tee-Object -FilePath build.log"
-        $scriptContent = $scriptContent -replace '\$exePath = "\.\\scratch\\p2pool-sim\\p2pool-sim\.exe"', '$exePath = ".\ns3.44-p2pool-sim-release.exe"'
-        $scriptContent | Set-Content -Path "scripts/run-sim.ps1"
-      shell: powershell
-    
-    - name: Run NS-3 Simulation
-      run: |
-        cd scripts
-        .\run-sim.ps1 --nNodes=100 --simDuration=600 > ..\simulation-results.txt
-      shell: powershell
-    
-    - name: Upload Build Log
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: build-logs
-        path: |
-          scripts/../ns-allinone-3.44/ns-3.44/build/build.log
-          scripts/../ns-allinone-3.44/ns-3.44/build/CMakeFiles/CMakeOutput.log
-          scripts/../ns-allinone-3.44/ns-3.44/build/CMakeFiles/CMakeError.log
+        docker run --rm \
+          -v $(pwd)/results:/results \
+          p2pool-ns3:latest \
+          --nNodes=50 \
+          --simDuration=600 \
+          --RngRun=1 > results/simulation-output.txt
     
     - name: Upload Results
-      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: simulation-results
-        path: simulation-results.txt
+        path: results/simulation-output.txt
